# fs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  path.c  path_test.c  stream.c
.github/workflows/: cmake.yml
cmake/: path-config.cmake
include/fs/: fs.h  path.h  stream.h
include/path/: path.h
test cases/: file size.txt
test cases/json/: directory directories.json  directory directory file.json  directory directory.json  directory file.json  directory files.json  directory mixed.json  directory nested.json  directory.json  file size.txt.json  file.txt.json
test cases/paths/directory directory file/directory/: file.txt
